@@ -2,9 +2,10 @@
 \name{NEWS}
 \title{NEWS file for the basefun package}
 
-\section{Changes in Version 1.0-5 (2019-04-12)}{
+\section{Changes in Version 1.0-5 (2019-06-05)}{
   \itemize{
     \item{Make sure \code{bounds[1]} is positive if \code{log_first = TRUE}.}
+    \item{Correct behaviour outside support when \code{log_first = TRUE}.}
   }
 }
 
